# Account_book

./: .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt  schema.sql
books/: admin.py  initial_book_data.py  models.py  permissions.py  serializers.py  services.py  tests.py  urls.py  views.py
books/migrations/: 0001_initial.py  0002_initial.py  0003_alter_book_bio.py  0003_rename_name_book_title.py  0004_urlshortner.py  0005_remove_urlshortner_shortner_url_and_more.py  0006_alter_urlshortner_created_at.py
config/: settings.py  urls.py
payhere/: auth_group.ibd  auth_group_permissions.ibd  auth_permission.ibd  books_book.frm  books_book.ibd  books_urlshortner.frm  books_urlshortner.ibd  django_admin_log.ibd  django_content_type.ibd  django_migrations.ibd  django_session.frm  django_session.ibd  urlshortner_url.frm  urlshortner_url.ibd  users_user.frm  users_user.ibd  users_user_groups.ibd  users_user_user_permissions.ibd
seed/migrations/: 9999_initial.py
users/: admin.py  initial_user_data.py  models.py  serilalizers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
