[tool.poetry]
name = "account-book"
version = "0.1.0"
description = ""
authors = ["hongsub <hong9506@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "account_book"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.4"
djangorestframework = "^3.14.0"
mysqlclient = "^2.1.1"
djangorestframework-simplejwt = "^5.2.2"
django-dotenv = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
